# BasicCMakeArchitecture

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TP4/TP4/: INF8225_TP4_DQN.ipynb
lib/: CMakeLists.txt
lib/Board/: Board.cpp  Board.h
lib/pieces/: piece.cpp  piece.h
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
